# services-monitor

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/core/: config.py  dependencies.py  exceptions.py  http_client.py  logging.py  ssrf.py
apps/api/slices/accessibility/: schemas.py  service.py
apps/api/slices/accessibility/tests/: test_service.py
apps/api/slices/ai_summary/: _anthropic.py  _common.py  _openai_compat.py  llm_client.py  preprocessing.py  prompt_builder.py  providers.py  retrieval_tool.py  router.py  schemas.py  service.py  storage.py  transformers.py
apps/api/slices/ai_summary/tests/: _builders.py  test_anthropic.py  test_config.py  test_llm_client.py  test_preprocessing.py  test_prompt_builder.py  test_retrieval_tool.py  test_service.py  test_storage.py  test_transformers.py  test_validate_key.py
apps/api/slices/audit/: router.py  schemas.py  service.py
apps/api/slices/audit/tests/: test_ai_summary_integration.py  test_service.py
apps/api/slices/discovery/: router.py  schemas.py  service.py
apps/api/slices/health_check/: router.py  schemas.py  service.py
apps/api/slices/input_validation/: router.py  schemas.py  service.py
apps/api/slices/reporting/: router.py  schemas.py  service.py
apps/api/slices/scoring/: schemas.py  service.py
apps/api/slices/security/: schemas.py  service.py
apps/api/slices/seo/: router.py  schemas.py  service.py
apps/api/slices/summaries/: storage.py
docs/: project assumptions.md  (+7 more)
(+62 files in other folders)
